add maker app details, updates words, adds sending HNT to maker account warning

--- a/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
@@ -76,3 +76,9 @@ $ helium-wallet burn --amount 10,000 --payee 138LbePH4r7hWPuTnK6HXVJ8ATM2QU71iVH
 ```
 
 When this runs, you'll be asked to supply the passphrase for your HNT wallet. If this is correct, and you have enough HNT to pay for the specified burn amount, it will succeed. 
+
+:::warning
+
+Do not send HNT into your Maker accounts. Doing so may result in lost funds. All Makers are required to pay for the onboarding fees for their customers. 
+
+:::
