--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
@@ -61,7 +61,10 @@ Product names on this page should follow [Helium branding guidelines](https://ww
 
 QR Code Onboarding allows Makers to generate a partial `add_gateway` transaction outside of the Helium App. Users use the camera in the Helium App to add this type of Hotspot. 
 
-To select QR Onboarding, in the `hotspot.ts` file, specify `QR` in `onboardType`. [View the example in the Maker Starter app](https://github.com/helium/maker-starter-app/blob/f15a887afead44f2c0bba6ac7460cffebe02dc03/src/makers/example/hotspots.ts#L43)|[View the example in the Hotspot app](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41) or [read more about generating QR codes](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/).
+To select QR Onboarding, in the `hotspot.ts` file, specify `QR` in `onboardType`. 
+[View the example in the Maker Starter app](https://github.com/helium/maker-starter-app/blob/f15a887afead44f2c0bba6ac7460cffebe02dc03/src/makers/example/hotspots.ts#L43)
+[View the example in the Hotspot app](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41)
+[Read more about generating QR codes](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/)
 
 ### Example QR Onboarding Flow
 <img
@@ -78,9 +81,12 @@ To select QR Onboarding, in the `hotspot.ts` file, specify `QR` in `onboardType`
 
 
 ## Web Onboarding
-Web Onboarding allows Makers to generate a partial `add_gateway` transaction outside of the Maker App. Makers generate a deep link back to the Helium App/Maker App to finish the `add_gateway` transaction. [Read more about deep linking](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/).
+Web Onboarding allows Makers to generate a partial `add_gateway` transaction outside of the Maker App. Makers generate a deep link back to the Helium App/Maker App to finish the `add_gateway` transaction. 
+[Read more about deep linking](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/).
 
-To select Web onboarding, in the `hotspot.ts` file, specify `web` in `onboardType`. [View the example in the Maker Starter app](https://github.com/helium/maker-starter-app/blob/main/src/makers/example/hotspots.ts)|[View the example in the Hotspot App](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41)
+To select Web onboarding, in the `hotspot.ts` file, specify `web` in `onboardType`. 
+[View the example in the Maker Starter app](https://github.com/helium/maker-starter-app/blob/main/src/makers/example/hotspots.ts)
+[View the example in the Hotspot App](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41)
 
 ## Bluetooth Pairing
 
@@ -88,8 +94,9 @@ The Maker App will start scanning for broadcasting Hotspots. Makers will need to
 
 The `localname` is the name used on the **Found Hotspots** page.
 
-To select Bluetooth onboarding, in the `hotspot.ts` file, specify `BLE` in `onboardType`. [View the example in the Maker Starter App](https://github.com/helium/maker-starter-app/blob/f15a887afead44f2c0bba6ac7460cffebe02dc03/src/makers/example/hotspots.ts#L6)|[View the example the Hotspot app](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L8).
-
+To select Bluetooth onboarding, in the `hotspot.ts` file, specify `BLE` in `onboardType`. 
+[View the example in the Maker Starter App](https://github.com/helium/maker-starter-app/blob/f15a887afead44f2c0bba6ac7460cffebe02dc03/src/makers/example/hotspots.ts#L6)
+[View the example the Hotspot app](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L8)
 [Read more about BLE Services](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services).
 
 # Constructing the Add Gateway Transaction
@@ -182,6 +189,12 @@ When you’re ready to start integration with the Test Maker account with the mo
 "rpi_serial": 
 ```
 
+`"mac_eth0": ` Ethernet MAC address
+`"mac_wlan0": ` Wi-Fi MAC address
+`"heliumSerial": ` Serial number for first generation Helium Hotspots. Can be ignored.
+`"onboarding_key":` The onboarding key generated from the Hotspot miner in base58. Required.
+`"rpi_serial": ` Serial number for the RaspberryPi. Can be repurposed to track your own serial number.
+
 ### Production
 
 When you move to production, the JSON should be formatted like this. Note the addition of the `batch` field:
@@ -193,7 +206,6 @@ When you move to production, the JSON should be formatted like this. Note the ad
 "onboarding_key": "base58 address from the Hotspot", 
 "rpi_serial": "any_value"
 ```
-
 
 ## Wallet App, Onboarding, and Data Credits
 
