--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
@@ -63,9 +63,9 @@ QR Code Onboarding allows Makers to generate a partial `add_gateway` transaction
 
 To select QR Onboarding, in the `hotspot.ts` file, specify `QR` in `onboardType`. 
 
-[View the example in the Maker Starter app](https://github.com/helium/maker-starter-app/blob/f15a887afead44f2c0bba6ac7460cffebe02dc03/src/makers/example/hotspots.ts#L43)
-[View the example in the Hotspot app](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41)
-[Read more about generating QR codes](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/)
+* [View the example in the Maker Starter app](https://github.com/helium/maker-starter-app/blob/f15a887afead44f2c0bba6ac7460cffebe02dc03/src/makers/example/hotspots.ts#L43)
+* [View the example in the Hotspot app](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41)
+* [Read more about generating QR codes](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/)
 
 ### Example QR Onboarding Flow
 <img
@@ -87,8 +87,8 @@ Web Onboarding allows Makers to generate a partial `add_gateway` transaction out
 
 To select Web onboarding, in the `hotspot.ts` file, specify `web` in `onboardType`. 
 
-[View the example in the Maker Starter app](https://github.com/helium/maker-starter-app/blob/main/src/makers/example/hotspots.ts)
-[View the example in the Hotspot App](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41)
+* [View the example in the Maker Starter app](https://github.com/helium/maker-starter-app/blob/main/src/makers/example/hotspots.ts)
+* [View the example in the Hotspot App](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41)
 
 ## Bluetooth Pairing
 
@@ -98,9 +98,9 @@ The `localname` is the name used on the **Found Hotspots** page.
 
 To select Bluetooth onboarding, in the `hotspot.ts` file, specify `BLE` in `onboardType`. 
 
-[View the example in the Maker Starter App](https://github.com/helium/maker-starter-app/blob/f15a887afead44f2c0bba6ac7460cffebe02dc03/src/makers/example/hotspots.ts#L6)
-[View the example the Hotspot app](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L8)
-[Read more about BLE Services](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services).
+* [View the example in the Maker Starter App](https://github.com/helium/maker-starter-app/blob/f15a887afead44f2c0bba6ac7460cffebe02dc03/src/makers/example/hotspots.ts#L6)
+* [View the example the Hotspot app](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L8)
+* [Read more about BLE Services](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services).
 
 # Constructing the Add Gateway Transaction
 
@@ -192,15 +192,15 @@ When you’re ready to start integration with the Test Maker account with the mo
 "rpi_serial": 
 ```
 
-`"mac_eth0": ` Ethernet MAC address
+`"mac_eth0":` Ethernet MAC address
 
-`"mac_wlan0": ` Wi-Fi MAC address
+`"mac_wlan0":` Wi-Fi MAC address
 
-`"heliumSerial": ` Serial number for first generation Helium Hotspots. Can be ignored.
+`"heliumSerial":` Serial number for first generation Helium Hotspots. Can be ignored.
 
 `"onboarding_key":` The onboarding key generated from the Hotspot miner in base58. Required.
 
-`"rpi_serial": ` Serial number for the RaspberryPi. Can be repurposed to track your own serial number.
+`"rpi_serial":` Serial number for the RaspberryPi. Can be repurposed to track your own serial number.
 
 ### Production
 
