--- a/docs/wallets/ledger.mdx
+++ b/docs/wallets/ledger.mdx
@@ -18,9 +18,7 @@ This guide will walk through using Helium on a Ledger Nano S but is similar to
 setup on the Nano X.
 
 :::info
-As of version 2.1.1, the Helium Ledger application is currently PENDING REVIEW
-by the Ledger team. The application is scheduled for security review and we
-hope to hear about the results by end of Q3 2021.
+Ledger CLI using experimental mode is supported at this time. Work to enable HNT in Ledger Live in addition to a CLI is ongoing.
 :::
 
 ## Installing the Helium ledger application
