--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -107,7 +107,7 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 | Provider                                                     | Non-custodial full node | Pooling     | Pricing                                                             | Notes
 | :----------------------------------------------------------- |:----------------------- |:----------- | :-------------------------------------------------------------------|:-----
 | [Allnodes](https://www.allnodes.com)                         | Yes                     | No          | $80 per month (Basic) or $0.2380 per hour (Advanced)                |
-| [Argon.build](https://www.argon.build)                       | Yes                     | No          | $80 per month + 3% reward share                                     |
+| [Argon.build](https://www.argon.build)                       | Yes                     | No          | 3% comission on earnings                                     |
 | [Bison Trails](https://www.bisontrails.co)                   | Yes                     | No          |                                                                     | Does not offer service to individuals who plan to run fewer than 10 nodes
 | [Chorus One](https://chorus.one/products/whitelabel-staking) | Yes                     | No          |                                                                     | Does not have public pricing.
 | [DLI](https://dlinodes.com)                                  | Yes                     | Yes         | All run in DLI Cloud, Staking, Nodes, 24/7 Support                  |
