--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -41,7 +41,7 @@ Learn more about how to get started using Console with our Tips and Tricks video
 * [Node Interface (Flows)](/use-the-network/console/flows)
 * [Alerts](/use-the-network/console/alerts)
 * [Multiple Packets](/use-the-network/console/multi-packets)
-* [Configuration Profiles](/use-the-network/console/profiles)
+* [Configuration Profiles (ADR, CF List, Receive Windows)](/use-the-network/console/profiles)
 
 ### Admin
 * [Users and Organizations](/use-the-network/console/users)
