--- a/docs/use-the-network/console/flows/flows-faq.mdx
+++ b/docs/use-the-network/console/flows/flows-faq.mdx
@@ -8,19 +8,19 @@ slug: /use-the-network/console/flows/flows-faq
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-### What’s changed in Console 2.0?
+### What’s changed in Helium Console?
 
-The biggest new feature of Console 2.0 is Flows. 
+The biggest new feature of Console is Flows. 
 Flows is a visual-centric view of the key elements in Console and allows users to instantly understand the relationship among devices, functions, and integrations. Flows enables users to visually connect nodes and control the flow of data.
 
-### What’s the same in Console 2.0?
+### What’s the same in Helium Console?
 
 The interface and work flows for the following have remained largely unchanged:
 - Data Credits 
 - Organizations
 - Users
 
-### Why did you make these changes to Console 2.0?
+### Why did you make these updates to Console?
 
 Based on learnings from your feedback, the team wanted to deliver a much more streamlined and intuitive experience to accomplish core user goals including adding devices, defining functions, and setting up integrations to transfer data to endpoints.
 
@@ -32,7 +32,7 @@ Yes. Labels will still exist to organize and manage devices. Users can choose to
 
 This functionality still exists. ADR and CF List can be directly applied to a device or group of devices. With notification and packet purchase users can define these features with general settings and apply to devices or groups of devices in the Flows workspace.
 
-### What will happen to devices and settings when you migrate Console 2.0 to the production server?
+### What will happen to devices and settings when you migrate Console to the production server?
 
 Nothing. Your devices and configurations will be preserved and you won’t need to take any action. 
 
