--- a/docs/blockchain/oracles/oracles.mdx
+++ b/docs/blockchain/oracles/oracles.mdx
@@ -54,7 +54,7 @@ establish a new HNT/$USD price. To do this:
 
 ### Who are the HNT Price Oracles?
 
-The HNT Oracle price feeds are supplied by a group eleven (11) Oracles, composed
+The HNT Oracle price feeds are supplied by a group of eleven (11) Oracles, composed
 of companies, organizations, and individuals. They are:
 
 - Helium, Inc
@@ -82,6 +82,12 @@ particular order):
 14hntpRicek9pxzHBDPVWPwYHHmExrksaxzAsTjjstgLfnfG5Ve
 14aQaRARuwLTLHLygiDNNapKZ7bcLSyXhHq9DeZ5kB2dnCxiiKv
 ```
+
+You can [list activity for a specific Oracle](https://docs.helium.com/api/blockchain/oracle-prices/#list-activity-for-a-specific-oracle) at:
+```
+https://api.helium.io/v1/oracle/:address/activity
+```
+
 
 ## Submitting an HNT Oracle Price
 
