--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -44,7 +44,7 @@ channels are the two most relevant for developers using the Network.
 <div class="container" style={{padding: 0}}>
 	<div class="row">
 	    <div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="homeicon" src={useBaseUrl("img/use-the-network/use1.svg")} />
+	    	<img className="homeicon" style={{maxWidth: 85}} src={useBaseUrl("img/use-the-network/use1.svg")} />
 	    	<h3>Devices</h3>
 	    	<p className="podtext">Purchase and customize Helium-enabled devices or prototype and build your own.</p>
 	    	<h5>Quick Links</h5>
@@ -52,7 +52,7 @@ channels are the two most relevant for developers using the Network.
 	   
 	    </div>
 	    <div class="col col--6 " style={{marginBottom: 100}}>
-	   		<img className="homeicon" src={useBaseUrl("img/use-the-network/use2.svg")} />
+	   		<img className="homeicon" style={{maxWidth: 85}} src={useBaseUrl("img/use-the-network/use2.svg")} />
 	    	<h3>Helium Console</h3>
 	    	<p className="podtext">The Helium Console is a web-based device management tool that allows developers to register, authenticate, and manage their devices on the Helium network.</p>
 	    	<a href="https://console.helium.com">Create Console Account <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
@@ -66,7 +66,7 @@ channels are the two most relevant for developers using the Network.
 	
 	    </div>
 	    <div class="col col--6"  style={{marginBottom: 100}}>
-		    <img className="homeicon" src={useBaseUrl("img/use-the-network/use3.svg")} />
+		    <img className="homeicon" style={{maxWidth: 85}} src={useBaseUrl("img/use-the-network/use3.svg")} />
 		    <h3>Community Projects</h3>
 		    <p className="podtext">We love seeing community projects that utilise the network in clever new ways.</p>
 		    <a href="/use-the-network">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
@@ -76,7 +76,7 @@ channels are the two most relevant for developers using the Network.
 		    <a className="block" href="/use-the-network/community-projects#environmental"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Environmental</a>
 	    </div>
 	    <div class="col col--6"  style={{marginBottom: 100}}>
-		    <img className="homeicon" src={useBaseUrl("img/use-the-network/use4.svg")} />
+		    <img className="homeicon" style={{maxWidth: 85}} src={useBaseUrl("img/use-the-network/use4.svg")} />
 		    <h3>Coverage Mapping</h3>
 		    <p className="podtext">Mappers is a community-led effort to actively survey the signal intensity of the Helium Network, using configured-trackers.</p>
 		    <a href="https://mappers.helium.com">See the Map <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
