--- a/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
@@ -42,7 +42,7 @@ integration.
 
 Next we'll fill in the details, see instructions and image below.
 
-1. Enter the Mappers API Endpoint URL (Required)
+1. Enter the Mappers API Ingest Endpoint URL (Required)
    `https://mappers.helium.com/api/v1/ingest/uplink`
 2. Enter the name for this Integration: _Mappers Integration_
 3. Create and apply a Label for this Integration, we've used the same name as
