Update Mappers quickstart page (#523)
* Update Mappers quickstart page 

Updating with new terminology - for Endpoint URL, not Ingest endpoint

* Update mappers-quickstart.mdx

Updating per Kent's suggestion.

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

--- a/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-quickstart.mdx
@@ -40,7 +40,7 @@ integration.
 
 Next we'll fill in the details, see instructions and image below.
 
-1. Enter the Mappers API Ingest endpoint
+1. Enter the Mappers API Ingest Endpoint URL (Required)
    `https://mappers.helium.com/api/v1/ingest/uplink`
 2. Enter the name for this Integration: _Mappers Integration_
 3. Finally, click _Add Integration_ to complete.
