--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -124,5 +124,5 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 | [StakeMyHNT](https://www.stakemyhnt.com)                     | Yes                     | Coming soon | $169 per month                                                      |
 | [Validators Pool](https://helium.bx-host.com)                | Yes                     | No          | $120 per month + 2% comission on earnings                           |
 | [Vanager](https://vanager.io)                                | No                      | Yes         | $4 per day + 3% comission on earnings                               |
-| [Blockdaemon](https://blockdaemon.com/)                      | Yes                     | No          | 5% commission with flexible payment options                         | Cloud offerings.
+| [BLOCKDAEMON](https://blockdaemon.com/)                      | Yes                     | No          | 5% commission with flexible payment options                         | Cloud offerings.
 
