--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -477,7 +477,7 @@ Where a frequency plan is "Unknown" it means that non of the above Frequency Pla
 |Country                                     |Frequency Plan|
 |--------------------------------------------|--------------|
 |Vanuatu                                     |AS923_3       |
-|Vatican City (Holy See)                     |UEU868        |
+|Vatican City (Holy See)                     |EU868         |
 |Venezuela                                   |AS923_1       |
 |Vietnam                                     |AS923_2       |
 |Virgin Islands (UK)                         |AU915         |
